// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisuallyHiddenHeadline with headline data should render correctly 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <h1
    class="emotion-0"
    id="content"
    tabindex="-1"
  >
    This is a headline!
  </h1>
</div>
`;

exports[`VisuallyHiddenHeadline with plain text headline should render h1 containing correct text 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <h1
    class="emotion-0"
    id="content"
    tabindex="-1"
  >
    Plain headline
  </h1>
</div>
`;
